add JWT authentication
