# docs/swagger.json
@@ -15,6 +15,11 @@
     "paths": {
         "/api/v1/author": {
             "get": {
+                "security": [
+                    {
+                        "Bearer Authentication": []
+                    }
+                ],
                 "description": "Fetch a list of all authors.",
                 "consumes": [
                     "*/*"
@@ -26,6 +31,15 @@
                     "Author"
                 ],
                 "summary": "Fetch a list of all authors.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "'Bearer _YOUR_TOKEN_'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -45,6 +59,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "Bearer Authentication": []
+                    }
+                ],
                 "description": "Update an author.",
                 "consumes": [
                     "*/*"
@@ -56,6 +75,15 @@
                     "Author"
                 ],
                 "summary": "Update an author.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "'Bearer _YOUR_TOKEN_'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Updated ID",
@@ -84,6 +112,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "Bearer Authentication": []
+                    }
+                ],
                 "description": "Create an author.",
                 "consumes": [
                     "*/*"
@@ -95,6 +128,15 @@
                     "Author"
                 ],
                 "summary": "Create an author.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "'Bearer _YOUR_TOKEN_'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Created ID",
@@ -119,6 +161,11 @@
         },
         "/api/v1/author/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "Bearer Authentication": []
+                    }
+                ],
                 "description": "Delete an author by ID.",
                 "consumes": [
                     "*/*"
@@ -136,6 +183,13 @@
                         "description": "Author id",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "'Bearer _YOUR_TOKEN_'",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -169,6 +223,11 @@
         },
         "/api/v1/book": {
             "get": {
+                "security": [
+                    {
+                        "Bearer Authentication": []
+                    }
+                ],
                 "description": "Fetch a list of all books.",
                 "consumes": [
                     "*/*"
@@ -180,6 +239,15 @@
                     "Book"
                 ],
                 "summary": "Fetch a list of all books.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "'Bearer _YOUR_TOKEN_'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -201,6 +269,11 @@
         },
         "/api/v1/book/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "Bearer Authentication": []
+                    }
+                ],
                 "description": "Delete a book by ID.",
                 "consumes": [
                     "*/*"
@@ -218,6 +291,13 @@
                         "description": "Book id",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "'Bearer _YOUR_TOKEN_'",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
